crates/ink/tests/ui/selector_bytes/fail/missing_parameter.rs
const _: u32 = ink::selector_bytes!(Abi::Ink, );

fn main() {}
