crates/ink/tests/ui/selector_bytes/fail/missing_parameter.stderr
error: expected exactly 2 arguments (Abi enum, string literal), found 1
 --> tests/ui/selector_bytes/fail/missing_parameter.rs:1:37
  |
1 | const _: u32 = ink::selector_bytes!(Abi::Ink, );
  |                                     ^^^^^^^^^
